# CommitLM

./: .commitlm-config.json  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test.py
.github/ISSUE_TEMPLATE/: config.yml  standard.yml
CommitLM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
commitlm/cli/: commands.py  init_command.py
commitlm/config/: prompts.py  settings.py
commitlm/core/: llm_client.py
commitlm/integrations/: git_client.py
docs/: README.md  commit_0f483aa_20251013_003125.md  commit_332d043_20251013_002016.md  commit_389522c_20251013_144020.md  commit_95fbe36_20251013_173629.md  commit_bc3a250_20251013_160900.md  commit_bc7fc4c_20251013_142523.md  commit_chorepyproject-update-version-and-license-format_c29e14a.md  commit_chorerelease-increment-version-to-106_a0adcd4.md  commit_d1c2e94_20251013_163403.md  commit_da2689a_20251013_140829.md  commit_docsreadme-enhance-readme-with-badges-table-of-con_2f2b6c7.md  commit_docsreadme-refined-readme_11fd6be.md  commit_docsreadme-remove-redundant-license-key-points_780c680.md  commit_feat-add-apache-20-license-notice-file-and-update_6be69e5.md  commit_refactordocs-improve-commit-documentation-filename_169a372.md  commit_refactorgit-update-doc-filename-to-use-commit-mess_47a5e7a.md  commit_refactorgitclient-sanitize-commit-message-for-doc_b8b3b97.md
test_environment/: sample_code.py
