[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CommitLM"
version = "1.0.0"
description = "AI-powered documentation generator with git hooks"
authors = [{name = "Sin Liang Lee", email = "sinlianglee@outlook.com"}]
requires-python = ">=3.9"
dependencies = [
    "gitpython",
    "pygithub", 
    "transformers>=4.35.0",
    "torch>=2.0.0", 
    "accelerate",
    "optimum[cpu]",
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2",
    "rich",
    "python-dotenv",
    "watchdog",
    "google-genai",
    "anthropic",
    "openai",
    "InquirerPy"
]

[project.scripts]
commitlm = "commitlm.cli.commands:main"

[tool.setuptools.packages.find]
include = ["commitlm*"]
exclude = ["changelogs*", "docs*"]